build an index and result page

--- a/style.css
+++ b/style.css
@@ -8,7 +8,10 @@
     --font-serif: ui-serif, Georgia, Cambria, "Times New Roman", Times, serif;
     --font-mono: ui-monospace, SFMono-Regular, Menlo, Monaco, Consolas, "Liberation Mono",
       "Courier New", monospace;
-    --color-indigo-500: oklch(58.5% 0.233 277.117);
+    --color-red-800: oklch(44.4% 0.177 26.899);
+    --color-green-800: oklch(44.8% 0.119 151.328);
+    --color-blue-800: oklch(42.4% 0.199 265.638);
+    --color-indigo-800: oklch(39.8% 0.195 277.366);
     --color-violet-300: oklch(81.1% 0.111 293.571);
     --color-violet-500: oklch(60.6% 0.25 292.717);
     --color-violet-600: oklch(54.1% 0.281 293.009);
@@ -16,6 +19,7 @@
     --color-violet-800: oklch(43.2% 0.232 292.759);
     --color-gray-100: oklch(96.7% 0.003 264.542);
     --color-gray-500: oklch(55.1% 0.027 264.364);
+    --color-gray-600: oklch(44.6% 0.03 256.802);
     --color-black: #000;
     --color-white: #fff;
     --spacing: 0.25rem;
@@ -218,21 +222,6 @@
   .top-\[20\%\] {
     top: 20%;
   }
-  .top-\[40\%\] {
-    top: 40%;
-  }
-  .top-\[50\%\] {
-    top: 50%;
-  }
-  .top-\[100\%\] {
-    top: 100%;
-  }
-  .top-\[100\] {
-    top: 100;
-  }
-  .top-\[400\%\] {
-    top: 400%;
-  }
   .top-full {
     top: 100%;
   }
@@ -245,23 +234,8 @@
   .right-20 {
     right: calc(var(--spacing) * 20);
   }
-  .-bottom-1 {
-    bottom: calc(var(--spacing) * -1);
-  }
-  .-bottom-15 {
-    bottom: calc(var(--spacing) * -15);
-  }
-  .-bottom-20 {
-    bottom: calc(var(--spacing) * -20);
-  }
   .bottom-0 {
     bottom: calc(var(--spacing) * 0);
-  }
-  .bottom-5 {
-    bottom: calc(var(--spacing) * 5);
-  }
-  .bottom-20 {
-    bottom: calc(var(--spacing) * 20);
   }
   .left-4 {
     left: calc(var(--spacing) * 4);
@@ -277,6 +251,12 @@
   }
   .z-100 {
     z-index: 100;
+  }
+  .z-200 {
+    z-index: 200;
+  }
+  .z-300 {
+    z-index: 300;
   }
   .float-left {
     float: left;
@@ -298,9 +278,6 @@
     @media (width >= 96rem) {
       max-width: 96rem;
     }
-  }
-  .m-0 {
-    margin: calc(var(--spacing) * 0);
   }
   .m-0\.5 {
     margin: calc(var(--spacing) * 0.5);
@@ -353,9 +330,6 @@
   .hidden {
     display: none;
   }
-  .table {
-    display: table;
-  }
   .h-8 {
     height: calc(var(--spacing) * 8);
   }
@@ -377,9 +351,6 @@
   .h-24 {
     height: calc(var(--spacing) * 24);
   }
-  .h-25 {
-    height: calc(var(--spacing) * 25);
-  }
   .h-30 {
     height: calc(var(--spacing) * 30);
   }
@@ -392,20 +363,8 @@
   .h-45 {
     height: calc(var(--spacing) * 45);
   }
-  .h-50 {
-    height: calc(var(--spacing) * 50);
-  }
   .h-\[50\%\] {
     height: 50%;
-  }
-  .h-\[60\%\] {
-    height: 60%;
-  }
-  .h-\[60\] {
-    height: 60;
-  }
-  .h-\[60v\] {
-    height: 60v;
   }
   .h-\[60vh\] {
     height: 60vh;
@@ -422,23 +381,14 @@
   .min-h-50 {
     min-height: calc(var(--spacing) * 50);
   }
-  .w-1 {
-    width: calc(var(--spacing) * 1);
-  }
   .w-1\/2 {
     width: calc(1/2 * 100%);
-  }
-  .w-3 {
-    width: calc(var(--spacing) * 3);
   }
   .w-3\/4 {
     width: calc(3/4 * 100%);
   }
   .w-5 {
     width: calc(var(--spacing) * 5);
-  }
-  .w-10 {
-    width: calc(var(--spacing) * 10);
   }
   .w-12 {
     width: calc(var(--spacing) * 12);
@@ -476,14 +426,14 @@
   .w-45 {
     width: calc(var(--spacing) * 45);
   }
-  .w-123 {
-    width: calc(var(--spacing) * 123);
-  }
   .w-\[40\%\] {
     width: 40%;
   }
   .w-\[80\%\] {
     width: 80%;
+  }
+  .w-\[90\%\] {
+    width: 90%;
   }
   .w-fit {
     width: fit-content;
@@ -496,9 +446,6 @@
   }
   .min-w-\[80\%\] {
     min-width: 80%;
-  }
-  .border-collapse {
-    border-collapse: collapse;
   }
   .translate-x-0 {
     --tw-translate-x: calc(var(--spacing) * 0);
@@ -520,9 +467,6 @@
   }
   .cursor-pointer {
     cursor: pointer;
-  }
-  .resize {
-    resize: both;
   }
   .grid-cols-2 {
     grid-template-columns: repeat(2, minmax(0, 1fr));
@@ -551,8 +495,8 @@
   .justify-center {
     justify-content: center;
   }
-  .gap-0 {
-    gap: calc(var(--spacing) * 0);
+  .justify-start {
+    justify-content: flex-start;
   }
   .gap-0\.5 {
     gap: calc(var(--spacing) * 0.5);
@@ -563,9 +507,6 @@
   .gap-1\.5 {
     gap: calc(var(--spacing) * 1.5);
   }
-  .gap-2 {
-    gap: calc(var(--spacing) * 2);
-  }
   .gap-4 {
     gap: calc(var(--spacing) * 4);
   }
@@ -574,9 +515,6 @@
   }
   .overflow-hidden {
     overflow: hidden;
-  }
-  .rounded {
-    border-radius: 0.25rem;
   }
   .rounded-2xl {
     border-radius: var(--radius-2xl);
@@ -615,11 +553,20 @@
   .bg-\[rgb\(93\,17\,114\)\] {
     background-color: rgb(93,17,114);
   }
+  .bg-blue-800 {
+    background-color: var(--color-blue-800);
+  }
   .bg-gray-100 {
     background-color: var(--color-gray-100);
   }
-  .bg-indigo-500 {
-    background-color: var(--color-indigo-500);
+  .bg-green-800 {
+    background-color: var(--color-green-800);
+  }
+  .bg-indigo-800 {
+    background-color: var(--color-indigo-800);
+  }
+  .bg-red-800 {
+    background-color: var(--color-red-800);
   }
   .bg-violet-300 {
     background-color: var(--color-violet-300);
@@ -638,9 +585,6 @@
   }
   .bg-white {
     background-color: var(--color-white);
-  }
-  .p-0 {
-    padding: calc(var(--spacing) * 0);
   }
   .p-1 {
     padding: calc(var(--spacing) * 1);
@@ -673,9 +617,6 @@
   .text-white {
     color: var(--color-white);
   }
-  .underline {
-    text-decoration-line: underline;
-  }
   .shadow-2xl {
     --tw-shadow: 0 25px 50px -12px var(--tw-shadow-color, rgb(0 0 0 / 0.25));
     box-shadow: var(--tw-inset-shadow), var(--tw-inset-ring-shadow), var(--tw-ring-offset-shadow), var(--tw-ring-shadow), var(--tw-shadow);
@@ -686,15 +627,8 @@
       --tw-shadow-color: color-mix(in oklab, var(--color-gray-500) var(--tw-shadow-alpha), transparent);
     }
   }
-  .outline {
-    outline-style: var(--tw-outline-style);
-    outline-width: 1px;
-  }
   .blur {
     --tw-blur: blur(8px);
-    filter: var(--tw-blur,) var(--tw-brightness,) var(--tw-contrast,) var(--tw-grayscale,) var(--tw-hue-rotate,) var(--tw-invert,) var(--tw-saturate,) var(--tw-sepia,) var(--tw-drop-shadow,);
-  }
-  .filter {
     filter: var(--tw-blur,) var(--tw-brightness,) var(--tw-contrast,) var(--tw-grayscale,) var(--tw-hue-rotate,) var(--tw-invert,) var(--tw-saturate,) var(--tw-sepia,) var(--tw-drop-shadow,);
   }
   .hover\:rounded-2xl {
@@ -723,6 +657,11 @@
       background-color: rgb(93,17,114);
     }
   }
+  .md\:-top-30 {
+    @media (width >= 48rem) {
+      top: calc(var(--spacing) * -30);
+    }
+  }
   .md\:block {
     @media (width >= 48rem) {
       display: block;
@@ -746,11 +685,6 @@
   .md\:h-24 {
     @media (width >= 48rem) {
       height: calc(var(--spacing) * 24);
-    }
-  }
-  .md\:h-60 {
-    @media (width >= 48rem) {
-      height: calc(var(--spacing) * 60);
     }
   }
   .md\:min-h-60 {
@@ -781,6 +715,11 @@
   .md\:w-\[50\%\] {
     @media (width >= 48rem) {
       width: 50%;
+    }
+  }
+  .md\:w-\[90\%\] {
+    @media (width >= 48rem) {
+      width: 90%;
     }
   }
   .md\:min-w-\[50\%\] {
@@ -896,6 +835,54 @@
   align-items: center;
   justify-content: center;
 }
+.sized {
+  display: flex;
+  height: calc(var(--spacing) * 42);
+  width: 60%;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  border-radius: var(--radius-2xl);
+  background-color: var(--color-white);
+  --tw-shadow: 0 25px 50px -12px var(--tw-shadow-color, rgb(0 0 0 / 0.25));
+  box-shadow: var(--tw-inset-shadow), var(--tw-inset-ring-shadow), var(--tw-ring-offset-shadow), var(--tw-ring-shadow), var(--tw-shadow);
+  --tw-shadow-color: oklch(44.6% 0.03 256.802);
+  @supports (color: color-mix(in lab, red, red)) {
+    --tw-shadow-color: color-mix(in oklab, var(--color-gray-600) var(--tw-shadow-alpha), transparent);
+  }
+  @media (width >= 48rem) {
+    height: calc(var(--spacing) * 50);
+  }
+  @media (width >= 48rem) {
+    width: 40%;
+  }
+  @media (width >= 48rem) {
+    font-size: var(--text-xl);
+    line-height: var(--tw-leading, var(--text-xl--line-height));
+  }
+}
+.interior {
+  min-height: calc(var(--spacing) * 20);
+  min-width: calc(var(--spacing) * 20);
+  overflow: hidden;
+  border-radius: calc(infinity * 1px);
+  border-style: var(--tw-border-style);
+  border-width: 2px;
+  border-color: var(--color-white);
+  background-color: var(--color-violet-800);
+  @media (width >= 48rem) {
+    min-height: calc(var(--spacing) * 30);
+  }
+  @media (width >= 48rem) {
+    min-width: calc(var(--spacing) * 30);
+  }
+}
+.image {
+  width: calc(var(--spacing) * 16);
+  @media (width >= 48rem) {
+    width: calc(var(--spacing) * 24);
+  }
+}
 @property --tw-translate-x {
   syntax: "*";
   inherits: false;
@@ -1005,11 +992,6 @@
   inherits: false;
   initial-value: 0 0 #0000;
 }
-@property --tw-outline-style {
-  syntax: "*";
-  inherits: false;
-  initial-value: solid;
-}
 @property --tw-blur {
   syntax: "*";
   inherits: false;
@@ -1095,7 +1077,6 @@
       --tw-ring-offset-width: 0px;
       --tw-ring-offset-color: #fff;
       --tw-ring-offset-shadow: 0 0 #0000;
-      --tw-outline-style: solid;
       --tw-blur: initial;
       --tw-brightness: initial;
       --tw-contrast: initial;
