--- a/style.css
+++ b/style.css
@@ -204,44 +204,14 @@
   .sticky {
     position: sticky;
   }
-  .-top-0 {
-    top: calc(var(--spacing) * -0);
-  }
   .-top-8 {
     top: calc(var(--spacing) * -8);
-  }
-  .-top-10 {
-    top: calc(var(--spacing) * -10);
-  }
-  .-top-20 {
-    top: calc(var(--spacing) * -20);
   }
   .-top-30 {
     top: calc(var(--spacing) * -30);
   }
-  .-top-35 {
-    top: calc(var(--spacing) * -35);
-  }
-  .-top-40 {
-    top: calc(var(--spacing) * -40);
-  }
-  .-top-50 {
-    top: calc(var(--spacing) * -50);
-  }
-  .-top-60 {
-    top: calc(var(--spacing) * -60);
-  }
-  .-top-80 {
-    top: calc(var(--spacing) * -80);
-  }
-  .-top-100 {
-    top: calc(var(--spacing) * -100);
-  }
-  .-top-250 {
-    top: calc(var(--spacing) * -250);
-  }
-  .-top-\[35\%\] {
-    top: calc(35% * -1);
+  .-top-45 {
+    top: calc(var(--spacing) * -45);
   }
   .top-4 {
     top: calc(var(--spacing) * 4);
@@ -255,9 +225,6 @@
   .top-65 {
     top: calc(var(--spacing) * 65);
   }
-  .top-\[5\%\] {
-    top: 5%;
-  }
   .top-\[10\%\] {
     top: 10%;
   }
@@ -266,9 +233,6 @@
   }
   .top-\[20\%\] {
     top: 20%;
-  }
-  .top-\[35\%\] {
-    top: 35%;
   }
   .top-full {
     top: 100%;
@@ -284,9 +248,6 @@
   }
   .bottom-0 {
     bottom: calc(var(--spacing) * 0);
-  }
-  .bottom-10 {
-    bottom: calc(var(--spacing) * 10);
   }
   .left-4 {
     left: calc(var(--spacing) * 4);
@@ -350,6 +311,9 @@
   }
   .m-5 {
     margin: calc(var(--spacing) * 5);
+  }
+  .m-10 {
+    margin: calc(var(--spacing) * 10);
   }
   .mx-2 {
     margin-inline: calc(var(--spacing) * 2);
@@ -452,6 +416,9 @@
   }
   .h-full {
     height: 100%;
+  }
+  .h-screen {
+    height: 100vh;
   }
   .min-h-10 {
     min-height: calc(var(--spacing) * 10);
@@ -829,11 +796,6 @@
   .md\:-top-30 {
     @media (width >= 48rem) {
       top: calc(var(--spacing) * -30);
-    }
-  }
-  .md\:top-\[30\%\] {
-    @media (width >= 48rem) {
-      top: 30%;
     }
   }
   .md\:block {
