--- a/style.css
+++ b/style.css
@@ -195,29 +195,47 @@
   .absolute {
     position: absolute;
   }
-  .fixed {
-    position: fixed;
-  }
   .relative {
     position: relative;
   }
   .sticky {
     position: sticky;
   }
+  .-top-1 {
+    top: calc(var(--spacing) * -1);
+  }
+  .-top-5 {
+    top: calc(var(--spacing) * -5);
+  }
   .-top-8 {
     top: calc(var(--spacing) * -8);
+  }
+  .-top-15 {
+    top: calc(var(--spacing) * -15);
+  }
+  .-top-18 {
+    top: calc(var(--spacing) * -18);
   }
   .-top-30 {
     top: calc(var(--spacing) * -30);
   }
+  .-top-40 {
+    top: calc(var(--spacing) * -40);
+  }
   .-top-45 {
     top: calc(var(--spacing) * -45);
+  }
+  .-top-55 {
+    top: calc(var(--spacing) * -55);
   }
   .top-4 {
     top: calc(var(--spacing) * 4);
   }
-  .top-10 {
-    top: calc(var(--spacing) * 10);
+  .top-5 {
+    top: calc(var(--spacing) * 5);
+  }
+  .top-8 {
+    top: calc(var(--spacing) * 8);
   }
   .top-50 {
     top: calc(var(--spacing) * 50);
@@ -796,6 +814,16 @@
   .md\:-top-30 {
     @media (width >= 48rem) {
       top: calc(var(--spacing) * -30);
+    }
+  }
+  .md\:-top-40 {
+    @media (width >= 48rem) {
+      top: calc(var(--spacing) * -40);
+    }
+  }
+  .md\:-top-50 {
+    @media (width >= 48rem) {
+      top: calc(var(--spacing) * -50);
     }
   }
   .md\:block {
